koss-application-testing/bookinfo/details.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: details
spec:
    replicas: 3
    template:
        metadata:
            name: details
            labels:
                app: details
        spec:
            containers:
            - name: details
              image: danibachar/tester:latest
              ports:
              - name: http-port
                containerPort: 8081
              resources:
                  requests:
                      cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
    name: details
spec:
    type: LoadBalancer
    selector:
        app: details
    ports:
    - port: 31001
      nodePort: 31001
      targetPort: http-port
      protocol: TCP
