koss-application-testing/bookinfo/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: product
spec:
    replicas: 3
    selector:
        matchLabels:
            app: product
    template:
        metadata:
            name: product
            labels:
                app: product
        spec:
            containers:
            - name: product
              image: danibachar/tester:latest
              ports:
              - name: http-port
                containerPort: 8081
              resources:
                  requests:
                      cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
    name: product
spec:
    type: LoadBalancer
    selector:
        app: product
    ports:
    - port: 31004
      nodePort: 31004
      targetPort: http-port
      protocol: TCP
