koss-application-testing/bookinfo/rating.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rating
spec:
    replicas: 3
    selector:
        matchLabels:
            app: rating
    template:
        metadata:
            name: rating
            labels:
                app: rating
        spec:
            containers:
            - name: rating
              image: danibachar/tester:latest
              ports:
              - name: http-port
                containerPort: 8081
              resources:
                  requests:
                      cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
    name: rating
spec:
    type: LoadBalancer
    selector:
        app: rating
    ports:
    - port: 31003
      nodePort: 31003
      targetPort: http-port
      protocol: TCP
