koss-application-testing/bookinfo/reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: reviews
spec:
    replicas: 3
    selector:
        matchLabels:
            app: reviews
    template:
        metadata:
            name: reviews
            labels:
                app: reviews
        spec:
            containers:
            - name: reviews
              image: danibachar/tester:latest
              imagePullPolicy: Always # to conserve on pulling can change to not allways pull
              ports:
              - name: http-port
                containerPort: 8081
              resources:
                  requests:
                      cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
    name: reviews
spec:
    type: LoadBalancer
    selector:
        app: reviews
    ports:
    - port: 31002
      nodePort: 31002
      targetPort: http-port
      protocol: TCP
